# css

./: Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: check.yml  deploy.yml
assets/: app.css
src/: auth.rs  error.rs  main.rs  oauth.rs  routes.rs  state.rs
src/routes/: assignment.rs  class.rs  info.rs  mod.rs  todo.rs
templates/: README.md  assignment.jinja  base.jinja  class.jinja  classes.jinja  error.jinja  index.jinja  terms.jinja  todo.jinja
