[package]
name = "css"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
google-classroom1 = { version = "5", default-features = false }
tower-cookies = { version = "0.9", features = ["private"] }
serde = { version = "1", features = ["derive"] }
axum = { version = "0.6", features = ["json"] }
serde_json = "1.0"
thiserror = "1"
oauth2 = "4.4"
toml = "0.7"
hex = "0.4"
tera = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", default-features = false }
once_cell = "1.17.2"
tower-http = { version = "0.4.0", features = ["fs"] }